--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,17 +1,26 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-primary">
-     <div class="container">
-       <a href="/" class="navbar-brand">KADINHEPP</a>
-       <ul class="navbar-nav me-auto">
 
-       </ul>
-       <ul class="navbar-nav">
-         <li *ngIf="!isAuthenticated" class="nav-item">
-           <a  routerLink="/auth" class="nav-link">Login</a>
-         </li>
-         <li *ngIf="isAuthenticated" class="nav-item">
-           <a routerLink="/logout" class="nav-link">Logout</a>
-         </li>
-       </ul>
-     </div>
-   </nav>
-   
+
+<nav class="navbar navbar-expand-md navbar-dark bg-danger">
+  <div class="container">
+    <a href="/" class="navbar-brand">KADINHEPP</a>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a *ngIf="!isAuthenticated" routerLink="/auth" class="nav-link"
+          >Login
+        </a>
+      </li>
+      <li *ngIf="isAuthenticated" class="nav-item">
+        <a (click)="logout()" class="nav-link btn">Logout </a>
+      </li>
+
+    
+    </ul>
+
+  </div>
+
+
+</nav>
+
+
+içerik
+
