--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -8,19 +8,33 @@
 
               <div class="col-md-6">
                   <form *ngIf="!loading; else loadingSpinner" class="login-form" #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
-                      <h2 class="text-center mb-4">LOGIN</h2>
+                      <h2 class="text-center mb-4">KAYIT OL</h2>
                       <div>
+                        <div class="mb-3">
+                            <input  type="text" ngModel name="name" class="form-control" placeholder="Name-Surname" id="name" required>
+                        </div>
                           <div class="mb-3">
-                              
                               <input  type="email" ngModel name="email" class="form-control" placeholder="Email" id="email" email required>
                           </div>
+                          
                           <div class="mb-3">
-                             
-                              <input  type="password" ngModel name="password" class="form-control" placeholder="Password" id="password" required minlength="6">
+                             <input  type="password" ngModel name="password" class="form-control" placeholder="Password" id="password" required minlength="6">
+                          </div>
+
+                          <div class="mb-3">   
+                            <input  type="password" ngModel name="password" class="form-control" placeholder="Password again" id="password" required minlength="6">
+                         </div>
+
+                         <div class="row mb-3"> <!-- Değiştirilen kısım: row class'ı eklendi -->
+                            <div class="col"> <!-- Değiştirilen kısım: col class'ı eklendi -->
+                              <select id="citySelect" class="form-select" (change)="selectCity($event)">
+                                <option value="">Şehir Seçin</option>
+                                <option *ngFor="let city of cities" [value]="city">{{ city }}</option>
+                              </select>
+                            </div>
                           </div>
                           
                           <div class="d-grid gap-2 mb-3">
-
                               <button type="submit" class="btn btn-primary btn-block" >  <!-- [disabled]="authForm.invalid" vardı kaldırdım -->
                                    {{isLoginMode ? 'Login': 'Register'}}
                               </button>
